virt01/manual/no_deploy/tdarr-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server-webui
spec:
  type: ClusterIP
  selector:
    app: tdarr-server
  ports:
    - port: 8265
      targetPort: 8265
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server-svc
spec:
  type: ClusterIP
  selector:
    app: tdarr-server
  ports:
    - port: 8266
      targetPort: 8266
