virt01/manual/no_deploy/tdarr-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-server
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: tdarr.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: tdarr-server-webui
            port:
              number: 8265
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tdarr.k3s.nf.lab
    secretName: tdarr-cert-tls
